# aoc-2022

./: pyproject.toml
day1/: day_1.py
day10/: day_10.py
day11/: day_11.py
day12/: day_12.py
day13/: day_13.py
day14/: day_14.py
day15/: day_15.py
day16/: day_16.py
day2/: day_2.py
day3/: day_3.py
day4/: day_4.py
day5/: day_5.py
day6/: day_6.py
day7/: day_7.py
day8/: day_8.py
day9/: day_9.py
